[gd_scene load_steps=6 format=3 uid="uid://diafng0gbtt1e"]

[ext_resource type="Script" uid="uid://cgse05rxq3mu3" path="res://addons/nascentsoul/core/zone.gd" id="1_cguwc"]
[ext_resource type="Script" uid="uid://cp2wg4dv5ce0" path="res://test_scene.gd" id="1_sreuk"]
[ext_resource type="PackedScene" uid="uid://cfsrpnraan7sj" path="res://color_card.tscn" id="2_sreuk"]
[ext_resource type="Script" uid="uid://brwos05y6e604" path="res://addons/nascentsoul/core/layout/hand_card_zone_layout_strategy.gd" id="3_go42g"]
[ext_resource type="Script" uid="uid://dt54nmcdljefy" path="res://addons/nascentsoul/core/sort/zone_sort_strategy.gd" id="4_sreuk"]

[node name="TestScene" type="Node2D"]
script = ExtResource("1_sreuk")

[node name="Panel" type="Panel" parent="."]
offset_left = 197.0
offset_top = 81.0
offset_right = 706.0
offset_bottom = 279.0

[node name="ColorRect" parent="Panel" instance=ExtResource("2_sreuk")]
layout_mode = 0

[node name="Zone" type="Node" parent="Panel" node_paths=PackedStringArray("target_container", "layout_strategy", "sort_strategy")]
script = ExtResource("1_cguwc")
target_container = NodePath("..")
layout_strategy = NodePath("ZoneLayoutStrategy")
sort_strategy = NodePath("../../ZoneSortStrategy")
metadata/_custom_type_script = "uid://cgse05rxq3mu3"

[node name="ZoneLayoutStrategy" type="Node" parent="Panel/Zone"]
script = ExtResource("3_go42g")
metadata/_custom_type_script = "uid://brwos05y6e604"

[node name="Panel2" type="Panel" parent="."]
offset_left = 195.0
offset_top = 336.0
offset_right = 704.0
offset_bottom = 491.0

[node name="Zone" type="Node" parent="Panel2" node_paths=PackedStringArray("target_container", "layout_strategy", "sort_strategy")]
script = ExtResource("1_cguwc")
target_container = NodePath("..")
layout_strategy = NodePath("ZoneLayoutStrategy")
sort_strategy = NodePath("../../ZoneSortStrategy")
metadata/_custom_type_script = "uid://cgse05rxq3mu3"

[node name="ZoneLayoutStrategy" type="Node" parent="Panel2/Zone"]
script = ExtResource("3_go42g")
card_size = Vector2(150, 250)
metadata/_custom_type_script = "uid://brwos05y6e604"

[node name="ZoneSortStrategy" type="Node" parent="."]
script = ExtResource("4_sreuk")
metadata/_custom_type_script = "uid://dt54nmcdljefy"

[node name="Button" type="Button" parent="."]
offset_left = 769.0
offset_top = 188.0
offset_right = 848.0
offset_bottom = 222.0
text = "Add Card"

[node name="Button2" type="Button" parent="."]
offset_left = 747.0
offset_top = 365.0
offset_right = 887.0
offset_bottom = 429.0
text = "move"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
